--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "npm run build && npx wrangler deploy src/App.tsx"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -26,7 +25,6 @@
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
-    "wrangler": "^4.1.0"
+    "vite": "^6.2.0"
   }
 }
